rs/embedders/tests/snapshots/instrumentation__control_flow.snap
---
source: rs/embedders/tests/instrumentation.rs
assertion_line: 65
expression: out
---
(module
  (type (;0;) (func (param i64)))
  (type (;1;) (func))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (param i64 i64 i32) (result i64)))
  (type (;4;) (func (param i32)))
  (type (;5;) (func (param i64 i64 i64)))
  (type (;6;) (func (param i64) (result i64)))
  (type (;7;) (func (param i32 i32) (result i32 i32)))
  (import "ic0" "call_cycles_add" (func $cycles_add (;0;) (type 0)))
  (import "__" "out_of_instructions" (func (;1;) (type 1)))
  (import "__" "try_grow_wasm_memory" (func (;2;) (type 2)))
  (import "__" "try_grow_stable_memory" (func (;3;) (type 3)))
  (import "__" "internal_trap" (func (;4;) (type 4)))
  (import "__" "stable_read_first_access" (func (;5;) (type 5)))
  (memory (;0;) 1 65536)
  (memory (;1;) i64 0 8192000)
  (memory (;2;) 2000 2000)
  (global (;0;) (mut i64) i64.const 0)
  (global (;1;) (mut i64) i64.const 0)
  (global (;2;) (mut i64) i64.const 0)
  (global (;3;) (mut i64) i64.const 0)
  (export "loop" (func 6))
  (export "countTo" (func 7))
  (export "if_then_else" (func 8))
  (export "memory" (memory 0))
  (export "stable_memory" (memory 1))
  (export "stable_bytemap_memory" (memory 2))
  (export "canister counter_instructions" (global 0))
  (export "canister counter_dirty_pages" (global 1))
  (export "canister counter_accessed_pages" (global 2))
  (export "canister heap_page_budget" (global 3))
  (func (;6;) (type 1)
    (local i64)
    global.get 0
    i64.const 3
    i64.sub
    global.set 0
    global.get 0
    i64.const 0
    i64.lt_s
    if ;; label = @1
      call 1
    end
    i64.const 0
    local.set 0
    block ;; label = @1
      loop ;; label = @2
        global.get 0
        i64.const 5
        i64.sub
        global.set 0
        global.get 0
        i64.const 0
        i64.lt_s
        if ;; label = @3
          call 1
        end
        local.get 0
        i64.const 10
        i64.eq
        br_if 1 (;@1;)
        global.get 0
        i64.const 12
        i64.sub
        global.set 0
        local.get 0
        call $cycles_add
        local.get 0
        i64.const 1
        i64.add
        local.set 0
        br 0 (;@2;)
      end
    end
  )
  (func (;7;) (type 0) (param i64)
    (local i64)
    global.get 0
    i64.const 3
    i64.sub
    global.set 0
    global.get 0
    i64.const 0
    i64.lt_s
    if ;; label = @1
      call 1
    end
    i64.const 0
    local.set 1
    loop ;; label = @1
      global.get 0
      i64.const 15
      i64.sub
      global.set 0
      global.get 0
      i64.const 0
      i64.lt_s
      if ;; label = @2
        call 1
      end
      local.get 1
      call $cycles_add
      local.get 1
      i64.const 1
      i64.add
      local.set 1
      local.get 0
      local.get 1
      i64.ne
      br_if 0 (;@1;)
    end
  )
  (func (;8;) (type 0) (param i64)
    global.get 0
    i64.const 6
    i64.sub
    global.set 0
    global.get 0
    i64.const 0
    i64.lt_s
    if ;; label = @1
      call 1
    end
    local.get 0
    i64.const 0
    i64.eq
    if ;; label = @1
      global.get 0
      i64.const 6
      i64.sub
      global.set 0
      i64.const 3
      call $cycles_add
    else
      global.get 0
      i64.const 6
      i64.sub
      global.set 0
      i64.const 5
      call $cycles_add
    end
  )
  (func (;9;) (type 6) (param i64) (result i64)
    (local i64)
    global.get 0
    local.get 0
    i64.sub
    local.tee 1
    global.get 0
    i64.gt_s
    if (result i64) ;; label = @1
      i64.const -9223372036854775808
    else
      local.get 1
    end
    global.set 0
    global.get 0
    i64.const 0
    i64.lt_s
    if ;; label = @1
      call 1
    end
    local.get 0
  )
  (func (;10;) (type 7) (param i32 i32) (result i32 i32)
    (local i32 i32 i32 i32)
    local.get 0
    local.get 1
    i32.ge_u
    if ;; label = @1
      i32.const 0
      i32.const 0
      return
    end
    local.get 0
    local.set 2
    loop ;; label = @1
      local.get 2
      i32.load8_u 2
      local.tee 3
      i32.const 1
      i32.and
      local.get 4
      i32.add
      local.set 4
      local.get 3
      i32.const 1
      i32.shr_u
      i32.const 1
      i32.and
      local.get 5
      i32.add
      local.set 5
      local.get 2
      i32.const 1
      i32.add
      local.tee 2
      local.get 1
      i32.lt_u
      br_if 0 (;@1;)
    end
    local.get 1
    local.get 0
    i32.sub
    local.get 4
    i32.sub
    local.get 1
    local.get 0
    i32.sub
    local.get 5
    i32.sub
  )
)

